--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -13,10 +13,11 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
-    "expo": "~50.0.13",
+    "expo": "~50.0.14",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
