--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 1,
-    "builds": [{ "src": "./server.mjs", "user": "@vercel/node"}],
+    "builds": [{ "src": "./server.mjs", "use": "@vercel/node"}],
     "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
