--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,4 @@
 {
     "builds": [{ "src": "./server.mjs", "use": "@vercel/node"}],
-    "routes": [{ "src": "/(.*)", "dest": "/" }]
+    "routes": [{ "src": "/(.*)", "destination": "/" }]
 }
