--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 2,
     "builds": [{ "src": "./server.mjs", "use": "@vercel/node"}],
-    "routes": [{ "src": "/(.*)", "destination": "/" }]
+    "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
