--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
