--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
     "expo": "~50.0.15",
+    "expo-font": "^11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
